--- a/assets/style.css
+++ b/assets/style.css
@@ -1,18 +1,155 @@
+* {
+    margin:0;
+    padding:0;
+    border:0;
+}
+
 .banner {
     background-color: #252F3D;
-    color:#fff;
-    font-size: small;
+
+}
+
+.banner-writing {
+ color: white;
+ font-size: 12px;
+ font-family: Manrope;
+ font-weight: 500;
+ text-transform: capitalize;
+ line-height: 12px;
+ word-wrap: break-word
 }
 
 .heading {
-    font-size : medium; 
+    color: black;
+    font-size: 48px;
+    font-family: Manrope;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 48px;
+    word-wrap: break-word
 }
+
+.sub-heading {
+    color: #4D5254;
+    font-size: 24px;
+    font-family: Manrope;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 24px;
+    word-wrap: break-word
+}
+
+
 
 .main-section {
     margin-top: 40px;
     margin-bottom: 40px;
 }
 .step-section {
-    font-weight:400;
-    margin-bottom:40px;
+    color: black;
+    font-size: 20px;
+    font-family: Manrope;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 22px;
+    word-wrap: break-word
 }
+
+.product-area {
+    margin-top: 60px;
+}
+
+.blue-heading {
+    color: #2C7EF8;
+    font-size: 32px;
+    font-family: Manrope;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 44.80px;
+    word-wrap: break-word
+}
+
+.normal-heading {
+    color: black;
+    font-size: 32px;
+    font-family: Manrope;
+    font-weight: 400;
+    text-transform: capitalize;
+}
+
+.image-background {
+    height:134px;
+    width:124px;
+    background-color: #2C7EF8;
+    border-radius: 10%;
+}
+
+.clarifion {
+    color: black;
+    font-size: 20px;
+    font-family: Manrope;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 28px;
+    word-wrap: break-word
+}
+
+.radio {
+    color: #37465A;
+    font-size: 16px;
+    font-family: Manrope;
+    font-weight: 300;
+    word-wrap: break-word
+}
+
+.simply {
+    color: #4D5254;
+    font-size: 16px;
+    font-family: Manrope;
+    font-weight: 400;
+    line-height: 22.40px;
+    word-wrap: break-word;
+}
+
+.product-info {
+    color: #4D5254;
+    font-size: 16px;
+    font-family: Manrope;
+    font-weight: 400;
+    line-height: 25.60px;
+    word-wrap: break-word;
+}
+
+.save {
+    width: 100%; 
+    height: 100%; 
+    padding-left: 16px;
+    padding-right: 16px; 
+    padding-top: 12px; 
+    padding-bottom: 12px; 
+    background: #EDF3FD; 
+    border-radius: 10px; 
+    flex-direction: column; 
+    justify-content: flex-start; 
+    align-items: flex-start; 
+    gap: 10px; 
+}
+
+
+.my-button {
+    background: #59AE43;
+    color: #fff;
+    width: 100%;
+    height: 100%; 
+    padding-left: 64px; 
+    padding-right: 64px; 
+    padding-top: 16px; 
+    padding-bottom: 16px; 
+    border-radius: 50px; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    gap: 10px; 
+    display: inline-flex;
+}
+
