--- a/assets/style.css
+++ b/assets/style.css
@@ -207,14 +207,14 @@ footer{
 
 .left-footer {
     text-align: left;
-    padding-left: 127px;
+    ;
     padding-top: 24px;
     color:#fff;
 }
 
 .right-footer {
     text-align: right;
-    padding-right: 127px;
+    
     padding-top: 24px;
     color:#fff;
 }
